[project]
name = "zara"
version = "v0.2.0"
description = "An elegant batteries-included web framework for python."
authors = [
    { name = "alexogeny", email = "6896115+alexogeny@users.noreply.github.com" }
]
dependencies = [
    "argon2-cffi>=23.1.0",
    "argon2-cffi-bindings>=21.2.0",
    "asyncpg>=0.29.0",
    "cffi>=1.16.0",
    "orjson>=3.10.7",
    "uvicorn>=0.30.6",
    "aiosqlite>=0.20.0",
    "httptools>=0.6.1",
    "uvloop>=0.20.0",
    "jwt>=1.3.1",
    "brotlipy>=0.7.0",
    "zstandard>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pyflakes>=3.2.0",
    "pyright>=1.1.376",
    "pytest>=8.3.2",
    "flake8>=7.1.1",
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zara"]
